# banya_bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  vercel.json
docs/: PRD.md
src/: __init__.py  config.py
src/api/: app.py  schemas.py
src/api/routes/: banyas.py  bookings.py  masters.py  users.py
src/bot/: __init__.py  bot.py
src/bot/handlers/: __init__.py  booking.py  main.py  master.py  owner.py  profile.py  search.py
src/bot/keyboards/: __init__.py  booking.py  main.py
src/bot/services/: __init__.py  availability.py  notifications.py
src/database/: __init__.py  connection.py  models.py
webapp/: app.js  index.html  styles.css
